# morpholib

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.md
docs/gallery/: epicycle.md  index.md  morphing-grids.md  mvt.md  mvt.py  pendulum.md  tanline.md  torus.md
docs/guides/: animation-in-depth.md  basic-guide.md  figures-and-gadgets.md  index.md  latex.md  modifiers.md  page-test.md  projects-old.md  projects.md  skits.md
docs/guides/old/: animation-in-depth.md  basic-guide.md  figures-and-gadgets.md  skits.md
examples/: example1.py  example2.py  example3.py  example4.py  scene.py
gallery/code/: epicycle.py  pendulum.py  sample.py  tanline.py  torus.py
morpholib/: __init__.py  actions.py  anim.py  base.py  bezier.py  calculus.py  color.py  combo.py  figure.py  gadgets.py  giffer.py  graph.py  graphics.py  grid.py  latex.py  matrix.py  sample.py  shapes.py  text.py  transitions.py  video.py
morpholib/tools/: __init__.py  basics.py  color.py  dev.py  img.py  ktimer.py  latex2svg.py  subimporter.py
tests/: conftest.py  test_setup_validation.py
